<resources>
    <string name="app_name">Ejercucicio7</string>
    <string-array name="cursos">
        <item>1º DAM</item>
        <item>2º DAM</item>
    </string-array>
    <string name="sinCurso">No hay ningún curso seleccionado</string>
    <string name="observaciones">Introduce observaciones</string>
    <string name="seleccionar">Selecciona un curso: </string>
    <string name="SeleccionarCurso">Seleccionar curso</string>
    <string name="enviar">Enviar</string>
</resources>