<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSeleccionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/seleccionar"/>
        <Spinner
            android:id="@+id/spiCurso"
            android:entries="@array/cursos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSeleccionarCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SeleccionarCurso"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtAsignatura"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sinCurso"
        android:gravity="center"/>
    <EditText
        android:id="@+id/txtObservaciones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:inputType="textMultiLine"
        android:hint="@string/observaciones"
        android:gravity="start"/>
    <Button
        android:id="@+id/btnEnviar"
        android:text="@string/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"/>

</LinearLayout>